<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="352dp"
        android:text="@string/etiqueta_titulo_about"
        android:textColor="@color/grey_nissan"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nissan_history" />

    <TextView
        android:id="@+id/texto_historia_nissan"
        android:layout_width="360dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="268dp"
        android:text="@string/texto_nissan_history1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nissan_history2"
        android:layout_width="356dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="196dp"
        android:text="@string/texto_nissan_history2"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nissan_history3"
        android:layout_width="356dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="132dp"
        android:text="@string/texto_nissan_history3"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nissan_history4"
        android:layout_width="356dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="52dp"
        android:text="@string/texto_nissan_history4"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>