<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="167dp"
        android:layout_height="151dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/aklogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registro_etiqueta_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/etiqueta_correo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_etiqueta_login" />

    <TextView
        android:id="@+id/registro_textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/etiqueta_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_editTextCorreo" />

    <EditText
        android:id="@+id/registro_editTextCorreo"
        android:layout_width="356dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/espacio"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_etiqueta_correo" />

    <TextView
        android:id="@+id/registro_etiqueta_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="Inicia sesión"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/registro_editTextPassword"
        android:layout_width="356dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/espacio"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_textViewPassword" />

    <TextView
        android:id="@+id/text_olvido_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/etiqueta_olvido_contrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_editTextPassword" />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/boton_iniciar_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_olvido_contrasena" />

    <TextView
        android:id="@+id/no_registrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_aun_no_te_registras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_iniciar_sesion" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/etiqueta_sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/no_registrado"
        app:layout_constraintTop_toBottomOf="@+id/boton_iniciar_sesion" />

</androidx.constraintlayout.widget.ConstraintLayout>

